--- a/themes/npds-boost_sk/views/header.html
+++ b/themes/npds-boost_sk/views/header.html
@@ -114,7 +114,7 @@ use npds\views\theme;
    </nav>
    <div class="page-header">
       <div class="row">
-      <div class="col-sm-2"><img class="img-fluid" src="themes/!theme!/images/header.png" /></div>
+      <div class="col-sm-2"><img class="img-fluid" src="themes/!theme!/assets/images/header.png" /></div>
          <div id="logo_header" class="col-sm-6">
             <h1 class="my-4">Npds Two Cms<br /><small class="text-muted">Responsive</small></h1>
          </div>
